Add a UI, first to 5 wins

--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
   <script src="./scripts/script.js" defer></script>
 </head>
 <body>
-  
+  <div id="container">
+    <h1>Instructions: Play "rock, paper, scissors", first to 5 wins</h1>
+    <div id="choices">
+      <button>Rock</button>
+      <button>Paper</button>
+      <button>Scissors</button>
+    </div>
+    <div id="results">&nbsp;</div>
+  </div>
 </body>
 </html>
